user indicator dark mode fix

--- a/src/Components/UserFinder.module.scss
+++ b/src/Components/UserFinder.module.scss
@@ -117,5 +117,9 @@
   .userCard {
     color: white;
     background-color: #222;
+
+    img {
+      filter: invert(1);
+    }
   }
 }
